# ralph

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml  flake.nix  prompt
.github/workflows/: ci-smoke.yml
.ralph/knowledge/: acp-connection-lifecycle-pattern-with-localset-and-owned-data.md  acp-connection-lifecycle.md  acp-permission-model.md  acp-schema-types-import-path.md  acp-trait-imports.md  agent-trait-must-be-imported-to-use-acp-connection-methods.md  auto-transitions.md  ci-smoke-testing.md  config-from-run-args-new-signature-post-acp-changes.md  config-from-run-args.md  configuration-layers.md  custom-color-palettes-in-ralph-toml.md  dependency-cycle-detection.md  error-handling-resilience.md  event-emission-system.md  execution-modes.md  feature-delete-command.md  feature-lifecycle.md  integration-test-binary-paths.md  interactive-flow-sigils-phase-complete-tasks-created.md  interrupt-handling.md  journal-knowledge-integration.md  journal-system.md  knowledge-system.md  linter-hook-reverts-files-on-compile-error.md  locating-required-features-binaries-in-integration-tests.md  mock-acp-agent-binary-pattern-with-agentsideconnection.md  mock-acp-agent-binary.md  model-strategy-selection.md  oneshot-vs-features.md  parent-status-derivation.md  project-state-v0.6.0.md  ratatui-ui-runtime.md  release-process.md  roam-protocol-bidirectional-linking.md  run-loop-lifecycle.md  sandbox-restrictions.md  schema-migrations.md  sigil-parsing.md  system-prompt-construction.md  (+12 more)
.ralph/specs/: iteration-memory.md
docs/: agent-loop.md  architecture.md  getting-started.md  interactive-flows.md  memory-and-learning.md  oneshot-vs-features.md  specs-plans-tasks.md  task-management.md
resources/: sandbox.sb
specs/: cli-restructure.md  config.md  dag-tracker.md  loop-changes.md  model-strategy-progress.txt  model-strategy.md  new-loop-changes.txt  new-loop-chnages.txt  system-prompt.md
src/: cli.rs  config.rs  feature.rs  feature_prompts.rs  interrupt.rs  journal.rs  knowledge.rs  lib.rs  main.rs  project.rs  review.rs  run_loop.rs  strategy.rs  verification.rs
src/acp/: client_impl.rs  connection.rs  interactive.rs  mod.rs  prompt.rs  sigils.rs  streaming.rs  tools.rs  types.rs
src/claude/: client.rs  events.rs  interactive.rs  mod.rs  parser.rs
src/dag/: crud.rs  db.rs  dependencies.rs  ids.rs  mod.rs  tasks.rs  transitions.rs
src/output/: formatter.rs  logger.rs  mod.rs
src/sandbox/: mod.rs  profile.rs  rules.rs
src/ui/: app.rs  event.rs  mod.rs  state.rs  theme.rs  view.rs
tests/: acp_integration.rs  mock_agent.rs  mock_agent_tools.rs
tests/smoke/: non_tty_smoke.sh  (+5 more)
