[package]
name = "ralph"
version = "0.6.0"
edition = "2021"
description = "Autonomous agent loop harness for Claude Code"
license = "MIT"
authors = ["Ralph Contributors"]
repository = "https://github.com/Studio-Sasquatch/ralph"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
colored = "2"
chrono = "0.4"
toml = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
signal-hook = "0.3"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
