[package]
name = "ralph"
version = "0.7.1"
edition = "2021"
description = "Autonomous agent loop harness for Claude Code"
license = "MIT"
authors = ["Ralph Contributors"]
repository = "https://github.com/Studio-Sasquatch/ralph"
# Disable auto-discovery of integration tests to avoid conflicts with mock agent binaries.
autotests = false

[features]
# Build the mock ACP agent binaries used by integration tests.
# Usage: cargo build --features test-mock-agents
test-mock-agents = []

[[example]]
name = "mock-agent"
path = "tests/mock_agent.rs"
required-features = ["test-mock-agents"]

[[example]]
name = "mock-agent-tools"
path = "tests/mock_agent_tools.rs"
required-features = ["test-mock-agents"]

[[test]]
name = "acp_integration"
path = "tests/acp_integration.rs"
required-features = ["test-mock-agents"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
colored = "2"
chrono = "0.4"
toml = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
signal-hook = "0.3"
agent-client-protocol = "0.9"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
async-trait = "0.1"
shlex = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
